# internal/server/protocol/v1/server.swagger.json
@@ -303,6 +303,169 @@
           "ServiceAPI"
         ]
       }
+    },
+    "/v1/state/watch/{id}": {
+      "get": {
+        "summary": "WatchProcessingState streams processing state updates for an object.\nThe stream ends when the object reaches a terminal state.",
+        "operationId": "ServiceAPI_WatchProcessingState",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/v1ProcessingState"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of v1ProcessingState"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": ".+"
+          },
+          {
+            "name": "name",
+            "description": "The list of possible required files. Will be taked only first existing file",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
+          }
+        ],
+        "tags": [
+          "ServiceAPI"
+        ]
+      }
+    },
+    "/v1/state/{id}": {
+      "get": {
+        "summary": "GetProcessingState returns the current processing state for an object.",
+        "operationId": "ServiceAPI_GetProcessingState",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ProcessingStateResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": ".+"
+          },
+          {
+            "name": "name",
+            "description": "The list of possible required files. Will be taked only first existing file",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
+          }
+        ],
+        "tags": [
+          "ServiceAPI"
+        ]
+      }
+    },
+    "/v1/workflow/{group}": {
+      "get": {
+        "summary": "GetWorkflow returns the v2 workflow manifest for a group/bucket.",
+        "operationId": "ServiceAPI_GetWorkflow",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1WorkflowResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "group",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ServiceAPI"
+        ]
+      },
+      "put": {
+        "summary": "SetWorkflow stores a v2 workflow manifest for a group/bucket.",
+        "operationId": "ServiceAPI_SetWorkflow",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1SimpleResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "group",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ServiceAPISetWorkflowBody"
+            }
+          }
+        ],
+        "tags": [
+          "ServiceAPI"
+        ]
+      }
     }
   },
   "definitions": {
@@ -326,16 +489,23 @@
         }
       }
     },
+    "ServiceAPISetWorkflowBody": {
+      "type": "object",
+      "properties": {
+        "workflow": {
+          "$ref": "#/definitions/v1Workflow"
+        }
+      },
+      "description": "DataWorkflow is the request body for SetWorkflow RPC."
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
         "@type": {
-          "type": "string",
-          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com. As of May 2023, there are no widely used type server\nimplementations and no plans to implement one.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+          "type": "string"
         }
       },
-      "additionalProperties": {},
-      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+      "additionalProperties": {}
     },
     "rpcStatus": {
       "type": "object",
@@ -362,15 +532,12 @@
         "name": {
           "type": "string"
         },
-        "values": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1Param"
-          }
+        "valuesJson": {
+          "type": "string",
+          "title": "values_json holds a JSON-encoded map[string]any of the action parameters.\nExample: {\"name\":\"image-resize-w\",\"width\":\"1200\",\"target\":\"large.jpg\"}"
         }
       },
-      "title": "Action which must be applied to source"
+      "description": "Action which must be applied to source.\nParameter values are carried as a JSON-encoded string (values_json) so that\nthe REST/JSON representation stays clean and free of \"@type\" annotations."
     },
     "v1Data": {
       "type": "object",
@@ -453,7 +620,8 @@
           "type": "string"
         },
         "extJson": {
-          "type": "string"
+          "type": "string",
+          "title": "deprecated: use attributes_json"
         },
         "status": {
           "$ref": "#/definitions/v1ObjectStatus"
@@ -461,9 +629,80 @@
         "updatedAt": {
           "type": "string",
           "format": "int64"
+        },
+        "path": {
+          "type": "string",
+          "description": "relative path inside object: \"thumbs/1.jpg\"",
+          "title": "New fields (v2):"
+        },
+        "role": {
+          "type": "string",
+          "title": "job that produced this artifact"
+        },
+        "attributesJson": {
+          "type": "string",
+          "title": "JSON-encoded map[string]any"
         }
       },
       "title": "ItemMeta information"
+    },
+    "v1JobState": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "status": {
+          "$ref": "#/definitions/v1JobStatus"
+        },
+        "worker": {
+          "type": "string"
+        },
+        "attempts": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "outputsJson": {
+          "type": "string",
+          "title": "JSON-encoded map[string]any"
+        },
+        "steps": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1StepState"
+          }
+        },
+        "error": {
+          "type": "string"
+        },
+        "startedAt": {
+          "type": "string",
+          "format": "int64",
+          "title": "Unix timestamp ms"
+        },
+        "finishedAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "progress": {
+          "type": "number",
+          "format": "float"
+        }
+      },
+      "description": "JobState is the runtime state of one job in the processing DAG."
+    },
+    "v1JobStatus": {
+      "type": "string",
+      "enum": [
+        "JOB_PENDING",
+        "JOB_RUNNING",
+        "JOB_COMPLETED",
+        "JOB_FAILED",
+        "JOB_SKIPPED"
+      ],
+      "default": "JOB_PENDING",
+      "title": "JobStatus enum"
     },
     "v1Manifest": {
       "type": "object",
@@ -575,6 +814,11 @@
         "updatedAt": {
           "type": "string",
           "format": "int64"
+        },
+        "attributesJson": {
+          "type": "string",
+          "description": "JSON-encoded map[string]any",
+          "title": "New fields (v2):"
         }
       },
       "title": "Meta information of the file object"
@@ -645,16 +889,70 @@
         }
       }
     },
-    "v1Param": {
+    "v1ProcessingState": {
       "type": "object",
       "properties": {
-        "name": {
+        "objectId": {
           "type": "string"
         },
-        "value": {
-          "$ref": "#/definitions/protobufAny"
+        "status": {
+          "$ref": "#/definitions/v1ProcessingStatus"
+        },
+        "progress": {
+          "type": "number",
+          "format": "float"
+        },
+        "manifestVersion": {
+          "type": "string"
+        },
+        "jobs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1JobState"
+          }
+        },
+        "startedAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "finishedAt": {
+          "type": "string",
+          "format": "int64"
         }
-      }
+      },
+      "description": "ProcessingState tracks the full execution state of a processing pipeline\nfor a single object."
+    },
+    "v1ProcessingStateResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/v1ResponseStatusCode"
+        },
+        "message": {
+          "type": "string"
+        },
+        "state": {
+          "$ref": "#/definitions/v1ProcessingState"
+        }
+      },
+      "description": "ProcessingStateResponse wraps ProcessingState in a standard response."
+    },
+    "v1ProcessingStatus": {
+      "type": "string",
+      "enum": [
+        "PROCESSING_PENDING",
+        "PROCESSING_RUNNING",
+        "PROCESSING_COMPLETED",
+        "PROCESSING_PARTIAL",
+        "PROCESSING_FAILED"
+      ],
+      "default": "PROCESSING_PENDING",
+      "title": "ProcessingStatus enum"
     },
     "v1ResponseStatusCode": {
       "type": "string",
@@ -664,7 +962,8 @@
         "FAILED",
         "NOT_FOUND"
       ],
-      "default": "UNKNOWN_INVALID"
+      "default": "UNKNOWN_INVALID",
+      "description": "ResponseStatusCode indicates the outcome of an API operation."
     },
     "v1SimpleObjectResponse": {
       "type": "object",
@@ -690,6 +989,187 @@
           "type": "string"
         }
       }
+    },
+    "v1StepState": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "status": {
+          "$ref": "#/definitions/v1StepStatus"
+        },
+        "durationMs": {
+          "type": "string",
+          "format": "int64"
+        },
+        "error": {
+          "type": "string"
+        }
+      },
+      "description": "StepState is the runtime state of one step within a job."
+    },
+    "v1StepStatus": {
+      "type": "string",
+      "enum": [
+        "STEP_PENDING",
+        "STEP_RUNNING",
+        "STEP_COMPLETED",
+        "STEP_FAILED",
+        "STEP_SKIPPED"
+      ],
+      "default": "STEP_PENDING",
+      "title": "StepStatus enum"
+    },
+    "v1Workflow": {
+      "type": "object",
+      "properties": {
+        "version": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "contentTypes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "tags": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "keepOriginal": {
+          "type": "boolean"
+        },
+        "originalName": {
+          "type": "string"
+        },
+        "validate": {
+          "$ref": "#/definitions/v1WorkflowValidate"
+        },
+        "jobs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1WorkflowJob"
+          }
+        }
+      },
+      "description": "Workflow is the top-level v2 manifest."
+    },
+    "v1WorkflowJob": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "runsOn": {
+          "type": "string"
+        },
+        "needs": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "timeoutMinutes": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "onFailure": {
+          "type": "string"
+        },
+        "ifExpr": {
+          "type": "string",
+          "title": "maps to \"if\" in YAML"
+        },
+        "steps": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1WorkflowStep"
+          }
+        }
+      },
+      "description": "WorkflowJob is a node in the processing DAG."
+    },
+    "v1WorkflowResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/v1ResponseStatusCode"
+        },
+        "message": {
+          "type": "string"
+        },
+        "workflow": {
+          "$ref": "#/definitions/v1Workflow"
+        }
+      },
+      "description": "WorkflowResponse is the response for GetWorkflow RPC."
+    },
+    "v1WorkflowStep": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "uses": {
+          "type": "string"
+        },
+        "withJson": {
+          "type": "string",
+          "title": "JSON-encoded map[string]any"
+        }
+      },
+      "description": "WorkflowStep is a single action within a WorkflowJob."
+    },
+    "v1WorkflowValidate": {
+      "type": "object",
+      "properties": {
+        "maxSize": {
+          "type": "string"
+        },
+        "minSize": {
+          "type": "string"
+        },
+        "contentTypes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "checks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1WorkflowValidateCheck"
+          }
+        }
+      },
+      "description": "WorkflowValidate defines pre-upload validation rules."
+    },
+    "v1WorkflowValidateCheck": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "uses": {
+          "type": "string"
+        },
+        "withJson": {
+          "type": "string"
+        }
+      },
+      "description": "WorkflowValidateCheck is a single validation check."
     }
   },
   "externalDocs": {
